--- a/ch.gibz.m151.demo/ch.gibz.m151.demo.api/appsettings.json
+++ b/ch.gibz.m151.demo/ch.gibz.m151.demo.api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "M151TestContext": "Data Source=TROMW033599\\SQLEXPRESS;Initial Catalog=M151.Demo;Integrated Security=True"
+  },
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   },
